Add initial HTML and CSS files for form and selectors layout

--- a/anilresume.html
+++ b/anilresume.html
@@ -11,7 +11,7 @@
     <p><b>Phone</b> : 7672036996</p>
     <p><b>Email</b> : <a href="anilchinna2108@gmail.com">anilchinna2108@gmail.com</a></p>
     <p><b>Address</b>: 1-11/2, Regonda, Lingala, Lingala, Jayashankar (K), Telangana, 508208</p>
-    <p><b>github</b> : <a href="https://github.com/anil-2108/LIBRARY-MANAGEMENT-SYSTEM">https://github.com/anil-2108/LIBRARY-MANAGEMENT-SYSTEM </a></p>
+    <p><b>github</b> : <a href="https://github.com/anil-2108/LIBRARY-MANAGEMENT-SYSTEM" target="_blank">https://github.com/anil-2108/LIBRARY-MANAGEMENT-SYSTEM</a></p>
 <h1><b>Career Objective</b></h1>
 <p>Motivated and detail-oriented engineering graduate with a strong foundation in Computer Science
     (AI & ML).Passionate about applying technical skills to real-world problems and eager to contribute to innovative projects in a dynamic organization
